--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -14,3 +14,39 @@ Since the beginning of COVID-19 pandemic, a range of conspiracy theories and pse
 
 In addition, as the pandemic had  worn on, the general public has grown increasingly skeptical of the preventive measures that public health officials are promoting throughout the developed world, the idea that ["lockdowns kill people"](https://www.radiologybusiness.com/topics/policy/scott-atlas-radiologist-white-house-covid-19-fauci) has been picked up by an increasingly large portions of pundits, activists and elected officials alike. Opponents of lockdowns claim that these restrictions have significant negative impacts on other aspects of public health, and those consequences vastly outweigh the the supposed benefits that these preventive measures are intended for. One of the most notable proponents of a "return to normal" approach is an organization named the [Great Barrington Declaration](https://gbdeclaration.org/), a group of epidemiologists and doctors who believe that reaching herd immunity instead of curbing the immediate spread of the virus is the "more compassionate approach that balances the risks and benefits".
 
+<br>
+
+### Related Work
+
+* [A closer look at U.S. deaths due to COVID-19](https://www.jhunewsletter.com/article/2020/11/a-closer-look-at-u-s-deaths-due-to-covid-19)
+  + A study from one Johns Hopkins researcher that claims that COVID-19 has not significantly impact neither the composition or the quantity of deaths reported in the United States from 2020. The letter had been widely circulated amongst right-wing websites and the university retracted the letter recently.
+* [Herd Immunity for COVID-19](https://www.thelancet.com/journals/lanres/article/PIIS2213-2600(20)30555-5/fulltext)
+  + A study that examines the arguments for anti-lockdown epidemiologists and their counter parts.
+* [Risk Perception Through the Lens of Politics in the Time of the COVID-19 Pandemic](https://www.nber.org/papers/w27008)
+  + A study that examines how pre-existing political affiliations and beliefs shape people's perception of the COVID-19 pandemic. It also examines to what extent polarization cripples government-led pandemic responses.
+* [COVID-19: a need for real-time monitoring of weekly excess deaths](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30933-8/fulltext)
+  + Journal article details the reasons as well as stressing the importance of excess death data in interpreting the impact of COVID-19.
+
+<br>
+
+### Initial Questions
+
+The project seeks to answer the following questions that would convince the COVID-19 "skeptics" and "truthers" on the severity of the pandemic as well as the effectiveness/necessity of public preventive measures.  
+
+* What do the excess deaths data of 2020 look like? Is excess deaths data of 2020 significantly different from recent years?  
+* Is COVID-19 responsible for the increase (or lack thereof) in excess deaths. If not, what are the other causes?  
+* Are the pandemic prevention measures such as travel restrictions and lockdowns contributing associated with significant negative public health consequences?  
+* How effective are those pandemic prevention measures in reducing the casualties caused by COVID-19?  
+
+<br>
+
+### Data
+
+***Excess Deaths Associated with COVID-19*** is from the [Centers for Disease Control and Prevention](https://data.cdc.gov/NCHS/Excess-Deaths-Associated-with-COVID-19/xkkf-xrst/). Excess deaths data is free public data published by Centers for Disease Control and Prevention. Estimates of excess deaths presented in this webpage were calculated using Farrington surveillance algorithms (1). For each jurisdiction, a model is used to generate a set of expected counts, and the upper bound of the 95% Confidence Intervals (95% CI) of these expected counts is used as a threshold to estimate excess deaths. Observed counts are compared to these upper bound estimates to determine whether a significant increase in deaths has occurred. The site provided csv files for download.
+
+***Provisional COVID-19 Death Counts by Week Ending Date and State*** was obtained from the [Centers for Disease Control and Prevention](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab). Deaths involving coronavirus disease 2019 (COVID-19), pneumonia, and influenza reported to NCHS by week ending date and by state. The site provided csv files for download.
+
+***COVID-19 Prevention Methods by States*** was obtained from the [National Academy of State Health Policy](https://www.nashp.org/governors-prioritize-health-for-all/). We import and link data on the lengths of each states stay-at-home-orders, mask mandate as well as travel restrictions based on information aggregated from by the National Academy of State Health Policy. The data was scrapped using `rvest`.
+
+***State Population Totals: 2010 - 2019*** was obtained from the [United States Census Bureau](https://www.census.gov/data/datasets/time-series/demo/popest/2010s-state-total.html). We import and link data on the population and demographic information for each state to further our analysis on COVID impacts as well as prevention outcomes. The site provided csv files for download.
+
