--- a/preventions.Rmd
+++ b/preventions.Rmd
@@ -287,7 +287,10 @@ mod6_df
 
 **Answer:** No. We do not see any significant relationship between how long state residents were asked to shelter-in-place and the number of non-COVID-19 deaths at home per 100,000 persons. This evidence weakens claims that requesting citizens to stay at home to prevent the spread of COVID-19 results in excess deaths at home from other causes   
 
-### Once implemented, were prevention measures effective in decreasing total excess deaths?
+### After implementation, were prevention measures effective in decreasing total excess deaths?
+
+We lastly wanted to evaluate if prevention measures that states took later infleunced the amount of above average deaths that state experienced. To do this analysis, we once again used our merged data of *Excess Deaths Associated with COVID-19*, state population, and prevention measures. We focused our investigation on excess deaths that occurred after the first peak and after lockdown measures were lifted to see if there were lasting protections from prevention measures. We fit a linear model clustering by state with duration of lockdown, mask mandates, and travel restrictions against total excess deaths per capita. 
+
 
 ```{r, collapse=TRUE}
 post_prevent = merged_data %>% 
@@ -308,7 +311,7 @@ post_prevent_final =
   mutate(covid_death_r=covid_deaths/population*100000) %>% 
   mutate(excess_not_covid_r=excess_not_covid/population*100000)
 
-mod7 = lm.cluster(excess_death_r ~ length + stay_at_home + mask_mandate + travel_restrictions, data = post_prevent_final, cluster="state")
+mod7 = lm.cluster(excess_death_r ~ length  + mask_mandate + travel_restrictions, data = post_prevent_final, cluster="state")
 
 mod7_sum = 
   summary(mod7) %>% 
@@ -321,12 +324,14 @@ mod7_CI =
 mod7_df=
   bind_cols(mod7_sum, mod7_CI) %>% 
   mutate(
-    Variables = c("Intercept", "Length of lockdown", "Lockdown order", "Mask mandate", "Travel restrictions")
+    Variables = c("Intercept", "Length of lockdown", "Mask mandate", "Travel restrictions")
   ) %>% 
   relocate(Variables) %>% 
-  kbl(caption="Linear model output assessing association of prevention measures and excess deaths per 100,000 residents post first peak", digits = 4) %>%
+  kbl(caption="Linear model output assessing association of prevention measures and excess deaths per 100,000 residents post first peak (after June 1st, 2020)", digits = 4) %>%
   kable_classic()
 
 mod7_df
 ```
+
+**Answer:** Each additional day of lockdown did decrease the number of excess deaths per capita. Additionally, states that imposed travel restrictions did decrease excess deaths per capita by 25 after the first peak compared to those that did not. Overall, it is difficult to measure the association between excess deaths and these prevention measures because of unaccounted confounding relationships, reverse causation, and other unmeasured variables. 
 
