--- a/about.Rmd
+++ b/about.Rmd
@@ -45,6 +45,8 @@ We believe that the excess deaths data from Center of Disease Control, in compar
 
 ***Provisional COVID-19 Death Counts by Week Ending Date and State*** was obtained from the [Centers for Disease Control and Prevention](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab). Deaths involving coronavirus disease 2019 (COVID-19), pneumonia, and influenza reported to NCHS by week ending date and by state.
 
+***Provisional COVID-19 Death Counts by Place of Death and State*** was also obtained from the [Centers for Disease Control and Prevention](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Place-of-Deat/uggs-hy5q). Deaths involving coronavirus disease 2019 (COVID-19), pneumonia and influenza reported to NCHS by place of death and state, United States. The site provided csv files for download.
+
 ***COVID-19 Prevention Methods by States*** was obtained from the [National Academy of State Health Policy](https://www.nashp.org/governors-prioritize-health-for-all/). We import and link data on the lengths of each states stay-at-home-orders, mask mandate as well as travel restrictions based on information aggregated from by the National Academy of State Health Policy. 
 
 ***State Population Totals: 2010 - 2019*** was obtained from the [United States Census Bureau](https://www.census.gov/data/datasets/time-series/demo/popest/2010s-state-total.html). We import and link data on the population and demographic information for each state to further our analysis on COVID impacts as well as prevention outcomes. 
