--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -46,6 +46,8 @@ The project seeks to answer the following questions that would convince the COVI
 
 ***Provisional COVID-19 Death Counts by Week Ending Date and State*** was obtained from the [Centers for Disease Control and Prevention](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab). Deaths involving coronavirus disease 2019 (COVID-19), pneumonia, and influenza reported to NCHS by week ending date and by state. The site provided csv files for download.
 
+***Provisional COVID-19 Death Counts by Place of Death and State*** was also obtained from the [Centers for Disease Control and Prevention](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Place-of-Deat/uggs-hy5q). Deaths involving coronavirus disease 2019 (COVID-19), pneumonia and influenza reported to NCHS by place of death and state, United States. The site provided csv files for download.
+
 ***COVID-19 Prevention Methods by States*** was obtained from the [National Academy of State Health Policy](https://www.nashp.org/governors-prioritize-health-for-all/). We import and link data on the lengths of each states stay-at-home-orders, mask mandate as well as travel restrictions based on information aggregated from by the National Academy of State Health Policy. The data was scrapped using `rvest`.
 
 ***State Population Totals: 2010 - 2019*** was obtained from the [United States Census Bureau](https://www.census.gov/data/datasets/time-series/demo/popest/2010s-state-total.html). We import and link data on the population and demographic information for each state to further our analysis on COVID impacts as well as prevention outcomes. The site provided csv files for download.
@@ -58,6 +60,15 @@ The project seeks to answer the following questions that would convince the COVI
 
 To accurately examine the impact of the coronavirus pandemic, our analysis follows a step-by-step progression that began with analyzing the total reported deaths from 2017 to 2020 up till October, the last month where we have complete statistics for. The total reported deaths of 2020 stands at 2,730,419, which is 15% higher than the closest year 2019's reported deaths of 2,342,978. In terms of monthly reported deaths, the year 2020 has seen multiple months with reported deaths over 300,000 - a number that no previous records have reached. In conclusion, we can say that there is a significant increase in total deaths occurring in the year of 2020.
 
-Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortaity rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upperbound threshold (95% CI) with afew exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortatlity reporting.
+Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortaity rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upperbound threshold (95% CI) with afew exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortality reporting.
 
+**Prevention Outcomes**
+
+We began our analysis of the relationship between prevention measures and excess deaths by first establishing which measures each state has taken to curb the spread of COVID-19. We then first assessed if the stringent demands to stay home led to an increase in non-COVID deaths. While some persons have asserted that requiring residents to shelter-in-place for prolong periods of time may cause other public health concerns, such as increases in suicides or overdoses, our analysis shows that there is no signficant relationship between length of lockdown and above average deaths not related to COVID-19. We further found that neither masks nor travel restrictions were related to above average deaths not related to COVID-19. 
+
+We then evaluated if how long a state "shutdown" was associated with the number of non-COVID-19 deaths occuring at the home. Testing the hypothesis that requiring persons to stay at home for longer would mean more persons dying at home from other causes, we found that there was no significant relationship. 
+
+Lastly, we then evaluated if prevention measures that states did take later influenced the amount of total excess deaths. Our findings suggest that states that imposed travel restrictions did experience 24 fewer above average deaths per capita compared to those that did not, and that for each day of lockdown states reduced the number of later above average deaths by 1. However, further analysis of these results is difficult due to uncontrolled confounding and possible reverse causation. 
+
+Overall, our findings indicate that lockdowns did not result in excess deaths from causes other than COVID-19 - negating the hypothesis that "lockdowns kill".  
 
