--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -29,7 +29,7 @@ In addition, as the pandemic had  worn on, the general public has grown increasi
 
 <br>
 
-### Initial Questions
+### Exploratory Analyses/Initial Questions
 
 The project seeks to answer the following questions that would convince the COVID-19 "skeptics" and "truthers" on the severity of the pandemic as well as the effectiveness/necessity of public preventive measures.  
 
@@ -37,6 +37,14 @@ The project seeks to answer the following questions that would convince the COVI
 * Is COVID-19 responsible for the increase (or lack thereof) in excess deaths. If not, what are the other causes?  
 * Are the pandemic prevention measures such as travel restrictions and lockdowns contributing associated with significant negative public health consequences?  
 * How effective are those pandemic prevention measures in reducing the casualties caused by COVID-19?  
+
+<br>
+
+
+### Aditional Analyses
+
+This project was intended to provide a data-driven, intuitive explainer for COVID-19 "skeptics" and "truthers". We believe that communicating to the general public about the dire situation that COVID-19 has brought is imperative for any public policy and prevention methods to work as they intended to - curbing the spread of a contagious virus needs a whole of society approach that requires cooperation from all citizens. We originally expected to create predictive matrix and interactive models that would visualize the effectiveness of COVID-19 prevention outcomes. However, we believe that such attempts would not yield the most useful/honest results for that we cannot account for many confounding factors as well as the issue of reverse causation. For example, we have seen that the spread of COVID-19 has positive correlation with the amount of time that people spend indoors. This factor is difficult control for as both cold and warm weather might lead to people 
+
 
 <br>
 
@@ -52,12 +60,19 @@ The project seeks to answer the following questions that would convince the COVI
 
 <br>
 
-### Exploratory Analyses
+### Discussion
 
 **COVID-19 Impacts**
 
 To accurately examine the impact of the coronavirus pandemic, our analysis follows a step-by-step progression that began with analyzing the total reported deaths from 2017 to 2020 up till October, the last month where we have complete statistics for. The total reported deaths of 2020 stands at 2,730,419, which is 15% higher than the closest year 2019's reported deaths of 2,342,978. In terms of monthly reported deaths, the year 2020 has seen multiple months with reported deaths over 300,000 - a number that no previous records have reached. In conclusion, we can say that there is a significant increase in total deaths occurring in the year of 2020.
 
-Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortaity rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upperbound threshold (95% CI) with afew exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortatlity reporting.
+Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortality rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upperbound threshold (95% CI) with afew exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortality reporting.
 
+In order to confirm that the 'shock event' that triggered mass casualties reported was indeed COVID-19, we conducted simple linear regression to examine the association between COVID-19 deaths reported and total excess deaths. The regression yielded a high $R^2$ value at 0.94, indicating that almost all variations in excess deaths can be explained by increase in COVID-19 deaths. The scatterplot graph also demonstrated that there exists an almost 1 to 1 relationship between the two variables. Hence we conclude that COVID-19 is indeed the culprit for the mass sike in casulties in 2020.
+
+To further explore the true toll of the coronavirus pandemic, we dive in to see if the COVID-19 deaths report underestimate or overestimate the true impact of the pandemic. We did so by investigate the relationship between non-COVID 19 excess deaths and reported COVID-19 deaths. It turns out that COVID-19 and non-COVID-19 excess deaths are highly correlated, indicating that there is underreporting of deaths caused by COVID-19 and the real pandemic death count is likely to be significantly higher than the reported number.
+
+After establishing that COVID-19 is indeed a mass casulties event that cannot be simply dismissed as "the flu", we looked at the specific data for each individual state to ascertain which states have taken the heaviest hit so far in the pandemic. We found that New Jersey, New York, Louisiana and Missisipi are all states that have seen a significant increase in excess deaths compared to historical records and on per capita basis. The pacific states (CA,WA,OR,AL,HI) and New England (MA,ME,VT,NH) are the two regions that have done the best job in terms of  COVID-19 prevention.
+
+**Prevention Outcomes**
 
