last changes to final report

--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -43,8 +43,7 @@ The project seeks to answer the following questions that would convince the COVI
 
 ### Aditional Analyses
 
-This project was intended to provide a data-driven, intuitive explainer for COVID-19 "skeptics" and "truthers". We believe that communicating to the general public about the dire situation that COVID-19 has brought is imperative for any public policy and prevention methods to work as they intended to - curbing the spread of a contagious virus needs a whole of society approach that requires cooperation from all citizens. We originally expected to create predictive matrix and interactive models that would visualize the effectiveness of COVID-19 prevention outcomes. However, we believe that such attempts would not yield the most useful/honest results for that we cannot account for many confounding factors as well as the issue of reverse causation. For example, we have seen that the spread of COVID-19 has positive correlation with the amount of time that people spend indoors. This factor is difficult control for as both cold and warm weather might lead to people 
-
+This project was intended to provide a data-driven, intuitive explainer for COVID-19 "skeptics" and "truthers". We believe that communicating to the general public about the dire situation that COVID-19 has brought is imperative for any public policy and prevention methods to work as they intended to - curbing the spread of a contagious virus needs a whole of society approach that requires cooperation from all citizens. We originally expected to create predictive matrix and interactive models that would visualize the effectiveness of COVID-19 prevention outcomes. However, we believe that such attempts would not yield the most useful/honest results for that we cannot account for many confounding factors as well as the issue of reverse causation. Public policy orders do not accurately reflect the degree of which they are fulfilled by the citizens. Weather, population density, cultural practices, mass social movements, treatment evolution and many other factors influence the efficacy of public policies. Without taking account into a myriad of factors, a predictive model does not provide enough utility to qualify for sound science.
 
 <br>
 
@@ -68,18 +67,14 @@ This project was intended to provide a data-driven, intuitive explainer for COVI
 
 To accurately examine the impact of the coronavirus pandemic, our analysis follows a step-by-step progression that began with analyzing the total reported deaths from 2017 to 2020 up till October, the last month where we have complete statistics for. The total reported deaths of 2020 stands at 2,730,419, which is 15% higher than the closest year 2019's reported deaths of 2,342,978. In terms of monthly reported deaths, the year 2020 has seen multiple months with reported deaths over 300,000 - a number that no previous records have reached. In conclusion, we can say that there is a significant increase in total deaths occurring in the year of 2020.
 
-<<<<<<< HEAD
-Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortality rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upperbound threshold (95% CI) with afew exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortality reporting.
+Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortality rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upper-bound threshold (95% CI) with a few exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortality reporting.
 
-In order to confirm that the 'shock event' that triggered mass casualties reported was indeed COVID-19, we conducted simple linear regression to examine the association between COVID-19 deaths reported and total excess deaths. The regression yielded a high $R^2$ value at 0.94, indicating that almost all variations in excess deaths can be explained by increase in COVID-19 deaths. The scatterplot graph also demonstrated that there exists an almost 1 to 1 relationship between the two variables. Hence we conclude that COVID-19 is indeed the culprit for the mass sike in casulties in 2020.
+In order to confirm that the 'shock event' that triggered mass casualties reported was indeed COVID-19, we conducted simple linear regression to examine the association between COVID-19 deaths reported and total excess deaths. The regression yielded a high $R^2$ value at 0.94, indicating that almost all variations in excess deaths can be explained by increase in COVID-19 deaths. The scatterplot graph also demonstrated that there exists an almost 1 to 1 relationship between the two variables. Hence we conclude that COVID-19 is indeed the culprit for the mass spike in casualties in 2020.
 
-To further explore the true toll of the coronavirus pandemic, we dive in to see if the COVID-19 deaths report underestimate or overestimate the true impact of the pandemic. We did so by investigate the relationship between non-COVID 19 excess deaths and reported COVID-19 deaths. It turns out that COVID-19 and non-COVID-19 excess deaths are highly correlated, indicating that there is underreporting of deaths caused by COVID-19 and the real pandemic death count is likely to be significantly higher than the reported number.
+To further explore the true toll of the Coronavirus pandemic, we dive in to see if the COVID-19 deaths report underestimate or overestimate the true impact of the pandemic. We did so by investigate the relationship between non-COVID 19 excess deaths and reported COVID-19 deaths. It turns out that COVID-19 and non-COVID-19 excess deaths are highly correlated, indicating that there is under-reporting of deaths caused by COVID-19 and the real pandemic death count is likely to be significantly higher than the reported number.
 
-After establishing that COVID-19 is indeed a mass casulties event that cannot be simply dismissed as "the flu", we looked at the specific data for each individual state to ascertain which states have taken the heaviest hit so far in the pandemic. We found that New Jersey, New York, Louisiana and Missisipi are all states that have seen a significant increase in excess deaths compared to historical records and on per capita basis. The pacific states (CA,WA,OR,AL,HI) and New England (MA,ME,VT,NH) are the two regions that have done the best job in terms of  COVID-19 prevention.
+After establishing that COVID-19 is indeed a mass casualties event that cannot be simply dismissed as "the flu", we looked at the specific data for each individual state to ascertain which states have taken the heaviest hit so far in the pandemic. We found that New Jersey, New York, Louisiana and Mississippi are all states that have seen a significant increase in excess deaths compared to historical records and on per capita basis. The pacific states (CA,WA,OR,AL,HI) and New England (MA,ME,VT,NH) are the two regions that have done the best job in terms of COVID-19 prevention.
 
-**Prevention Outcomes**
-=======
-Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortaity rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upperbound threshold (95% CI) with afew exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortality reporting.
 
 **Prevention Outcomes**
 
@@ -90,5 +85,4 @@ We then evaluated if how long a state "shutdown" was associated with the number 
 Lastly, we then evaluated if prevention measures that states did take later influenced the amount of total excess deaths. Our findings suggest that states that imposed travel restrictions did experience 24 fewer above average deaths per capita compared to those that did not, and that for each day of lockdown states reduced the number of later above average deaths by 1. However, further analysis of these results is difficult due to uncontrolled confounding and possible reverse causation. 
 
 Overall, our findings indicate that lockdowns did not result in excess deaths from causes other than COVID-19 - negating the hypothesis that "lockdowns kill".  
->>>>>>> dce3bcf89f5c3bfb58119e4ca274ee9a6677cc16
 
